# deep-head-pose-ncnn

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
models/detect/: retinaface.param
models/headpose/model_base/: robust_alpha.param
models/headpose/model_optimized/: robust_alpha_opt.param
models/landmark/: 2d106.param
ncnn/include/ncnn/: platform.h
src/: engine.cpp  engine.h  main.cpp
src/core/: common.cpp  common.h  headpose.cpp  headpose.h  retinaface.cpp  retinaface.h
